# rubricas

./: .env.example  .gitignore  LANGSMITH_TRACING.md  MANUAL_INSTALACION.md  README.md  _start.ps1  _start.sh  a2a_protocol.py  agent_adapters.py  architecture_diagram.html  architecture_diagram.md  create_rubric_registry_table.py  create_users_table.py  evaluacion_arch3.md  healthcheck_db.py  inspect_adk.py  langchain_agent.py  list_all_models.py  make_admin.py  package-lock.json  package.json  pyproject.toml  rubrica_igualdad_genero.txt  rubricador.py  rubricador_qdrant.py  rubricador_qdrant_local.py  rubricas.py  rubricas_qdrant.py  rubricas_qdrant_local.py  server.py  test_db.py  test_greeter_langgraph.py  test_groq.py  verify_a2a.py  verify_env.py
.agent/skills/: SKILL.md
app/: batch_manager.py  docx_converter.py  domain.py  i18n.py  main_agent.py  models.py  ontology_extractor.py  qdrant_service.py  rubric_repository.py  server.py  skill_loader.py
app/auth/: db.py  db_legacy.py  middleware.py  models.py  router.py  service.py
common/: config.py  llm_factory.py
data/: rubricai.db
docs/: ARCHITECTURE.md  IMPLEMENTACION.md  setup.md
frontend/: package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.jsx  index.css
hosts/orchestrator/: __main__.py  agent_tools.py  bee_router.py  remote_agent_connection.py
optimize/: README.md  __init__.py  evaluate_improvement.py  metric.py  optimized_rubricador.json  rubric_program.py  run_gepa.py  trainset.py
rubrics_repo/: bases_convocatoria_nuevos_cfg_20260414_1427.docx  convenio_2025_0410_20260414_1456.docx  guia_lenguaje_inclusivo_20260416_1323.docx  informacionwebelaboracionguiasdocentes_20260415_1602.docx  normativas_guias_docentes_udc_20260416_1355.docx  normativas_guias_docentes_udc_20260416_1444.docx  normativas_guias_docentes_udc_20260416_1449.docx  normativas_guias_docentes_udc_20260417_1831.docx  rescs_2025_2341_uba_20260415_1711.docx
scripts/: create_local_user_once.py
skills/: SKILL.md
skills/asistente-de-redaccion/: SKILL.md
skills/evaluador-de-cumplimiento/: SKILL.md
skills/normativa-a-rubrica/: SKILL.md
(+47 files in other folders)
