[project]
name = "rubricas-qdrant"
version = "0.1.0"
description = "Sistema de generación de rúbricas con Qdrant Vector Search y LangSmith"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "google-adk>=0.1.0",
    "qdrant-client>=1.7.0",
    "langsmith>=0.4.26",
    "pypdf>=4.0.0",
    "fastapi>=0.123.10",
    "uvicorn>=0.40.0",
    "python-multipart>=0.0.22",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "markdown>=3.10.2",
    "python-docx>=1.1.0",
    "litellm>=1.0.0",
    "openai>=1.0.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cloud-sql-python-connector[asyncpg]>=1.9.0",
    "asyncpg>=0.29.0",
    "bcrypt==4.0.1",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
]
